# ai-command-center

./: .gitignore  CLAUDE.md  README.md
desktop/: index.html  package.json  tailwind.config.ts  tsconfig.json
desktop/server/: index.ts
desktop/server/routes/: claude.ts  codex.ts  gemini.ts
desktop/server/services/: backup.ts
desktop/src/: App.tsx  index.css  main.tsx
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: lib.rs
desktop/src/components/: ErrorBoundary.tsx  Toast.tsx
desktop/src/components/cards/: ItemCard.tsx
desktop/src/components/editors/: ConfigEditor.tsx
desktop/src/components/layout/: Layout.tsx  Sidebar.tsx
desktop/src/components/viewers/: HistoryViewer.tsx
desktop/src/lib/: api.ts
desktop/src/pages/: Dashboard.tsx
desktop/src/pages/claude/: Chat.tsx  Commands.tsx  History.tsx  MCPs.tsx  Plugins.tsx  Projects.tsx  Settings.tsx  Skills.tsx
desktop/src/pages/codex/: Chat.tsx  Config.tsx  History.tsx  Projects.tsx  Prompts.tsx  Settings.tsx  Skills.tsx
docs/: prd.md
kanban-cli/: .gitignore  CLAUDE.md  README.md  database.py  main.py  models.py  pyproject.toml  run_tests.sh  scanner.py  tui.py  types-of-diagrams-miro.md  ui.py
kanban-cli/conductor/: prd-draft.md  product-guidelines.md  product.md  tech-stack.md  tracks.md
kanban-cli/conductor/tracks/mvp_kanban_20260110/: metadata.json  plan.md  spec.md
kanban-cli/openspec/: project.md
kanban-cli/tests/: test_cli.py  test_database.py  test_deployment.py  test_models.py  test_scanner.py  test_setup.py  test_tui.py  test_tui_setup.py  test_ui.py
(+5 files in other folders)
