[project]
name = "kanban-board"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "rich>=14.2.0",
    "typer>=0.21.1",
    "textual>=0.79.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "aiosqlite>=0.22.1",
    "instructor>=1.14.3",
    "tenacity>=9.1.2",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.14.11",
]
